src/objects/Project_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Achievement_of_Actual__c</fullName>
        <formula>(Actual_Revenue_Booked__c / Overall_TargetRevenue__c) *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Achievement of Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Revenue_Booked__c</fullName>
        <label>Actual Revenue @Booked</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Revenue_Negotiation__c</fullName>
        <label>Actual Revenue @Negotiation</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Revenue__c</fullName>
        <label>Average Revenue</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Number_Of_Units__c</fullName>
        <label>Expected Number Of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Units_Booked__c</fullName>
        <label>Number of Units @Booked</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Units_Negotiation__c</fullName>
        <label>Number of Units @Negotiation</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Achievement__c</fullName>
        <formula>Actual_Revenue_Booked__c + Actual_Revenue_Negotiation__c / Overall_TargetRevenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall % Achievement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_TargetRevenue__c</fullName>
        <label>Overall TargetRevenue</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Number__c</fullName>
        <label>Target Number</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Which_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Which Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Forecasts</relationshipLabel>
        <relationshipName>Project_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Which_Quarter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Which Quarter</label>
        <referenceTo>Quarter__c</referenceTo>
        <relationshipLabel>Project Forecasts</relationshipLabel>
        <relationshipName>Project_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Forecast</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Forecast  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>